# Ray_tracing

./: .gitignore  Cargo.toml  build.rs  flake.nix  result  rust-toolchain.toml
program/: Cargo.toml  build.rs
program/src/: main.rs  some_values.txt
program/src/modules/: bvh.rs  data.rs  hit.rs  material.rs  mod.rs  trace.rs  vulkan.rs
shader/: Cargo.toml  shader.vert  vert.spv
shader/src/: lib.rs
shader/src/modules/: data.rs  hit.rs  material.rs  mod.rs  trace.rs
shared/: Cargo.toml
shared/src/: lib.rs  materials.rs
src/: main.rs
src/modules/: data.rs  material.rs  mod.rs  trace.rs  vulkan.rs
src/ray/: hit.rs  material.rs  mod.rs  trace.rs
src/trace/: hit.rs  material.rs  mod.rs  trace.rs
vector3d/: Cargo.toml
vector3d/src/: lib.rs
