[workspace]
resolver = "2"
members = [
    "shared",
    "shader",
    "program",
    "vector3d",
]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[workspace.dependencies]
spirv-std = "0.8.0"