[workspace]
resolver = "2"
members = [
    "shared",
    "shader",
    "program",
]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[workspace.dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "21f46d985637a99b1d2dbfd9b5b5e3c05284a5b2" }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "21f46d985637a99b1d2dbfd9b5b5e3c05284a5b2" }
