[workspace]
resolver = "2"
members = [
    "shared",
    "shader",
    "program",
]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[workspace.dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "b320baf49b392b194e14f15bf06ad528c7ae656c" }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "b320baf49b392b194e14f15bf06ad528c7ae656c" }
