[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.6"
vulkanalia = { version = "=0.21.0", features = ["libloading", "provisional", "window"] }
winit = "0.28.6"
anyhow = "1.0.71"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.18"
png = "0.17"
pretty_env_logger = "0.5.0"
thiserror = "2.0"
shared = { path = "../shared" }


# set custom dependency for windows
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "=0.35.2", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.2", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "=0.35.2", features = ["use-pkgconfig"] }
sdl2-sys = { version = "=0.35.2", features = ["use-pkgconfig"] }

[build-dependencies]
shader = {path = "../shader" }
spirv-std.workspace = true
spirv-builder.workspace = true
