[package]
name = "shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-std = "0.8.0"
shared = { path = "../shared" }
vector3d = { path = "../vector3d" }

[lib]
crate-type = ["lib", "dylib"]
